Map location selector partially completed

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_AUTH_BACKEND_URL=http://localhost:3001/api/v1
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyDbVlJdxonkrrsIXEYfgoniLHoAyLKk308
+VITE_GOOGLE_MAPS_MAP_ID=f2e6e0ac26a93f7d2212a245
