--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "motion": "^12.23.12",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.7"
   },
