--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "motion": "^12.23.12",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
@@ -24,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.11",
+    "ws": "^8.18.3",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
