--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.11",
     "ws": "^8.18.3",
     "zustand": "^5.0.7"
